new intro and chassis text

--- a/Introduction.html
+++ b/Introduction.html
@@ -86,7 +86,7 @@
         <div class="grid-span">
           <h2>The history behind it</h2>
           Back in 2012, a seed was planted in my mind that having ridden many modern bikes across club and national series I found I was lacking the satisfaction I was hoping for when I started racing. Reluctant to pursue a relentless story of refinement I
-          started to think about what was missing; a relationship; the psychology of what was below me. If I believed it was capable, how faster could I go? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that had been pulled
+          started to think about what was missing; a relationship; the psychology of what was below me. If I believed it was capable, how faster could I go? To go against the grain and start enjoying racing again I purchased a £900 VFR800 that looked like it had been pulled
           out of the sea in Southampton in 2012. My plan was to always build a frame but what it would look like and what materials were mere minor details; it would happen, in good time.<br>
           As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using prodomently manual machines and hand fabrication techniques or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere.
@@ -100,12 +100,14 @@
         <div class="grid-left-two">
           <h2>The business</h2>
           A few years passed by where I persisted to run an engine tuning workshop and sub contract as an engineer to make up a busy 7 day working week. I took the VFR in fairly standard trim; albeit with my own fairings, exhaust and mildly tuned engine to the
-          southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a daft crash at the southern in 2014. When lying 2 inches under the broken
-          Connor Cummins in the chopper I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced go faster extras. At the time I had spent some hefty money; nearly
-          £8K on my 1 year old Triumph 675R which got me to 15th in the A 600 class without really trying. Not willing to blindly pursue a pre determined fate I threw my dummy out, no more pretending. At the same time I had learned that money wasn’t for me,
-          life was for living. I am a big believer now that you are what you do and to a certain extent; what you look like too. If I was going to work all day, every day I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
-          build a chassis. I've a dim view on education these days; it's for those who can’t do. Perhaps generations before mine depended on an education system as skills and information were so precious and harder to pass down. These days I believe we can all
-          out perform any University degree with whats avaliable on line and some real motivation. The world's slowing waking up to this change but it's not likely to be published as it's a brilliant source of revenue for the government. So my ethos is to
+          southern 100 amongst many club races for 2 years along with a 2nd modern bike to keep my eye in whilst I developed the VFR. The modern bikes kept me sharp for a while until a foolish crash in the Isle of Man in 2014 prompted me to make a change. When lying underneath the broken
+          Connor Cummins in the helicopter on the way Nobles hospital I decided that I was done with the boredom of modern racing; tired of the same 600’s and 1000’s being painted a different colour with excessively priced extras. The hay days of riding for teams and sponsers were long gone and 
+		  at the time I had spent my hard earned money
+          on my 1 year old Triumph 675R which got me to 15th in the southern 100 supersport 600 class before I got a chance to start pushing. <br>
+		  At the same time I had learned that working on other people's bikes and turning out tuned engines for club racers wasn't going to teach me more than I already knew.
+          Time for change. You are what you do and to a certain extent; what you look like too. If I was going to work all day, every day; I would look like I had! If I only worked on everyone else’s bike I wouldn’t learn how to
+          build a chassis. On that thought; I have a dim view of the education on offer these days; not enough flexibility to think outside the box; and they take too long. These days I believe we can all
+          out perform any University degree with whats available on line and some motivation. It's not likely to change so I shouldn't moan. So my ethos is to
           crack on and learn the hard way.
         </div>
       </div>
@@ -117,19 +119,18 @@
             Developments in 2016
           </div>
         </div>
-        I returned from the Island and set about getting some T45 tube and some oxyacetylene and cracking on. Drying the sand and ramming it in to produce a hot bend took a lot of practice and I’d say 2 years of 10’s of bends to get that real feel for what’s
+        I returned from the Island and set about getting some T45 tube and some oxyacetylene and making a start. Drying the sand and ramming it in to produce a hot bend took a lot of practice and perhaps a year of many bends to get that real feel for what’s
         going on. Every technical hurdle would spark a brief research through textbooks but something I was always adamant of was to stay away from any design or guidance that had been done before. If it exists I’m not interested in it. I needed to ensure my
         designs and philosophy was fresh and untainted. That way I felt my mind would have a greater chance of conjuring up something new which wasn’t a result of computer simulation pre-configured, logical algorithms which exist based on old theories
-        (what’s the point – at best you would just be copying someone else!) In later years it would make my blood boil when someone would glance at the bike in the holding area and ask ‘what is it mate’, ‘is that a ducati swingarm’, ‘who’s are those
-        fairings’. Knowing I was the underdog I had to be polite; ‘no, I made it all myself’. The following years have given me a massive understanding for metallurgy and thermal dynamics. 7 engines later and 3 rising rate suspension geometries have taught
-        me huge amounts and testing at the Southern has accelerated the rate of learninng 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
+        (what’s the point – at best you would just be copying someone else!). The following years have given me a massive understanding for metallurgy, thermal dynamics, aerodynamics and the tricky one: patience. 7 engines later and 3 rising rate suspension geometries have taught me a lot
+         and testing in the Isle of man has accelerated that rate 10 fold. Take a look at the technical journeys across the site and maybe look out for upcoming events… you’ll hear it coming for sure!
       </div>
       <div class="grid-wide-center">
         <h2>So who am I?</h2>
         So who am I? My name is Tom Parkes, I’m 31 at the time of writing this and have been building and racing my own chassis for 3 years now. The deeper I go, the more sense it makes; the big OEM’s are bound by performance metrics; fearful of research and
-        design with professional rider’s balls bursting for success. Who would want to risk it all and fail like those that have come and gone before. Let someone else do the innovation and graft and the crafty ways of the east will pluck it like they did in
-        the 70’s and spend the proceeding decades refining it! Despite not getting on the podium at the toughest race tracks in the world; I believe it’s very early days and unbeknown to most, I can see some real potential in it. At slower speeds it’s the
-        best bike I’ve ever ridden; smooth but yet solid and compliant, with do whatever you want whilst your braking steering. Just don’t go too fast into corners, just not yet anyway!
+        design with professional rider’s balls bursting for success. Who would want to risk it all and fail like those that have come and gone before. They let someone else do the innovation and risk and they'll soon snatch up the good ideas and spend the proceeding decades refining it.
+		Despite not getting on the podium at the toughest race tracks in the world; I believe it’s very early days and unbeknown to most, I can see some real potential in it. At slower speeds it’s the
+        best bike I’ve ever ridden; smooth, solid and exciting, with a useful ability to steer wherever you want whilst your braking.
         <br>
         <div class="image-right-container" width="350px">
           <img src="img/me2.jpg" class="image-right" width="330px">
@@ -138,10 +139,9 @@
           </div>
         </div>
         Motivation has been easy to find as the project has picked up momentum as I try to challenge convention. I'm actually not a massive fan of all things motorcycle. Most of the top racers live and breath bikes day and night. I don't keep upto date with
-        national or international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either. From March through to December I watch a few films at night but other than that; TV's just junk.
-        The machining skills and fabrication ability is all learnt on the fly; typical old fashioned British arrogance really. My father used to scare me that gearbox's were the work of the devil and I should never open the box or I would be haunted for
-        eternity. Once I rebuilt that gearbox when I was 20 on that old single cylinder BSA from the 60's I wasn't phased by anything, buying the tools and machines I needed to do the job. 10 years later I've almost convinced myself that anything Honda can
-        do; I can do better.
+        national or international racers; I watch one or two GP's a year if I'm not too busy in the shed when the repeats are on. I don't watch much TV either; mostly repeats from years ago.
+        The machining skills and fabrication ability is all learnt on the go. People would often scare me that gearbox's were the work of the devil and I should never peak inside or I would be haunted for
+        eternity. My curiosity wouldn't stop me and once inside I found it quite easy. I was about 19 at the time and as new challenges came and went I found I wasn't phased by much, buying the tools and machines I needed to do the job, some things just needed more concentration than others.
       </div <div class="grid-narrow-center">
       <h2>Look out for other new projects</h2>
       Keep an eye out for the new carbon fibre Parkes mountain bike project
