Contact form working

--- a/Aero.html
+++ b/Aero.html
@@ -153,13 +153,18 @@
         </div>
         <div class="grid-wide-center">
           <h2>Other features</h2>
+		  <div class="image-right-container" width="290px">
+		<img src="img/009.jpg" class="image-right" width="270px">
+          <div class="image-text">
+            Venting unwanted pressure
+          </div>
+		  </div>
           Little fins on the tank were added to expel the excess volume that gets pulled into the low pressure area behind the front fairing and finds itself pushing against the underside of the tank cover. Something I discovered in 2016 when at top speed;
 		  the tank cover popped up and tapped me on the chin. Concequently the pressures are now well directed and the cover well secured. The frontal area is not great due to all this ducting work; however it does shield the rider; me, far better than any other bike out there. I can only
           assume that the likes of Honda have analysed the trade off between rider extremities creating drag and wake Vs the additional frontal area to the overall drag coefficient and deemed that 'narrow as possible' is best? My thinking is potentially lagging
           behind as my work seems to resemble the conventional methods; widest point as far forward as possible, gentle reduction in form for the longest period possible making sure the wake is not too abrupt. Bike’s have a pretty terrible drag coefficient because of
           their length and the relative wake they create.<br>
 		  Ideally I think there is scope to effectively channel air from the high pressure area even better than I have to reduce the effective frontal area and control the flow through voids behind the fairings and gently merge with the wake. You can see this train of thought at work in the F1 world.
-         </div>
 		  <img src="img/262.jpg" class="image-center" width="380px">
           <div class="image-text">
             Just a few of the many moulds hanging from the walls
