--- a/Introduction.html
+++ b/Introduction.html
@@ -91,7 +91,7 @@
           As the developments have progressed to this day; the only component I am still using from that bike is the fuel pump. The rest has been made by myself using prodomently manual machines and hand fabrication techniques or for the few components I have
           not tackled such as brake calipers, wheels and crank casings; I have sourced elsewhere.
           <div class="image-right-container" width="350px">
-            <img src="img/2015.jpg" class="image-right" width="330px">
+            <img src="img/002.jpg" class="image-right" width="330px">
             <div class="image-text">
               The 1st build in Dec 2015
             </div>
@@ -114,9 +114,9 @@
       <div class="grid-right-three">
         <h2>Getting stuck in</h2>
         <div class="image-left-container" width="390px">
-          <img src="img/002.jpg" class="image-left" width="370px">
+          <img src="img/main.jpg" class="image-left" width="370px">
           <div class="image-text">
-            Developments in 2016
+            Developments in 2017
           </div>
         </div>
         I returned from the Island and set about getting some T45 tube and some oxyacetylene and making a start. Drying the sand and ramming it in to produce a hot bend took a lot of practice and perhaps a year of many bends to get that real feel for what’s
