--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h2>Raced at the toughest race track in the world</h2>
           <div>Where better to develop a prototype chassis with a unique suspension design than in between stone walls on public roads?</div>
           <p style="margin-top:1em">
-            <a href="/introduction.html">
+            <a href="./Introduction.html">
               <button>
                 Read the reports
               </button>
