changes to mobile friendly

--- a/Aero.html
+++ b/Aero.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>PARKES</title>
 
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
@@ -88,7 +88,7 @@
 			<div class="main-container">
 		<div class="grid-span">
      		 		 <h2>The history behind it</h2>
-					 It was early 2015, Oulton Park had a race weekend on. I put in a late entry to just race on the Saturday. Having never riden the chassis before, this was it's debut to see what it could do. My dad was stood on the pitwall monitoring laptimes when he overheard a fellow spectator say 'what's that; looks like a horse', someone responded; 'nah, more like a donkey'. My dad couldn't stop laughing. Problem was, he was right. The name has stuck ever since. What it did promote is the rapid redesign of the fairings. They were ugly and boxy, I needed to put a few months aside to do the job properly this time; build the whole bike as one with clay and plastercene rather than individual components. 
+					 It was early 2015, Oulton Park had a race weekend on. I put in a late entry to just race on the Saturday. Having never riden the chassis before, this was it's debut to see what it could do. My dad was stood on the pitwall monitoring laptimes when he overheard a fellow spectator say 'what's that; looks like a horse', someone responded; 'no, more like a donkey'. My dad couldn't stop laughing. Problem was, he was right. The name has stuck ever since. What it did promote is the rapid redesign of the fairings. They were ugly and boxy, I needed to put a few months aside to do the job properly this time; build the whole bike as one with clay and plastercene rather than individual components. 
           Making moulds are probably the one area which have cost the most time so far. I’m on the 3rd set now and fortunately I’m nearly there. There will always be changes to make but generally I am pleased with the aero and the look. Building up each
           component is a bit of a solace for me, I’m busy thinking of holidays and ice cream while I’m applying plastercene and cardboard to build them up to the shape I want. Every so often there’s a need to put on some resin or filler to give the backing
           some strength so that’s what drags a project out over many weeks.
@@ -111,29 +111,35 @@
         
 		<div class="images">
 			<div>
-				<img class="imagebox" src="img/12.jpg">
+				<img class="imagebox" src="img/13.jpg">
 				<div class="image-text">
-					Green gelcoat applied to part
+					Parts made from clay, resin then filler
 				</div>
 			</div>
 			<div>
 				<img class="imagebox" src="img/12.jpg">
 				<div class="image-text">
-					Pop mould off once cured
+					Wax then apply green tooling gelcoat
 				</div>
 			</div>
-        <img src="img/wetlay.jpg">
-		<div class="image-text">
-            Lay fabric into mould with resin
-          </div>
-        <img src="img/4.jpg">
-		<div class="image-text">
-            Remove part and flatten surface
-          </div>
-        <img src="img/5.jpg">
-		<div class="image-text">
-            Clear epoxy coat and polish
-          </div>
+			<div>
+				<img class="imagebox" src="img/wetlay.jpg">
+				<div class="image-text">
+					Remove mould from original part
+				</div>
+			</div>
+			<div>
+				<img class="imagebox" src="img/wetlay.jpg">
+				<div class="image-text">
+					Lay final carbon/ fibreglass into mould
+				</div>
+			</div>
+			<div>
+				<img class="imagebox" src="img/wetlay.jpg">
+				<div class="image-text">
+					Pop out once cured and polish
+				</div>
+			</div>
           </div>
 		  <div class="grid-narrow-center">
           <h2>Green slime tooling coat applied</h2>
@@ -153,8 +159,8 @@
         </div>
         <div class="grid-wide-center">
           <h2>Other features</h2>
-		  <div class="image-right-container" width="290px">
-		<img src="img/009.jpg" class="image-right" width="270px">
+		  <div class="image-right-container">
+		<img src="img/009.jpg" class="image-right" width="280px"">
           <div class="image-text">
             Venting unwanted pressure
           </div>
@@ -165,7 +171,8 @@
           behind as my work seems to resemble the conventional methods; widest point as far forward as possible, gentle reduction in form for the longest period possible making sure the wake is not too abrupt. Bike’s have a pretty terrible drag coefficient because of
           their length and the relative wake they create.<br>
 		  Ideally I think there is scope to effectively channel air from the high pressure area even better than I have to reduce the effective frontal area and control the flow through voids behind the fairings and gently merge with the wake. You can see this train of thought at work in the F1 world.
-		  <img src="img/262.jpg" class="image-center" width="380px">
+		  <div class="image-center-container2">
+		  <img src="img/262.jpg" class="image-center2">
           <div class="image-text">
             Just a few of the many moulds hanging from the walls
           </div>
