--- a/Contact.html
+++ b/Contact.html
@@ -7,7 +7,7 @@
 
     <script src="https://use.fontawesome.com/10386a299c.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
@@ -134,6 +134,7 @@
 			<script type='text/javascript' src="scripts/script.js"></script>
             </form>
 				<p id="input-feedback"></p>	
+				<iframe src="#" id="no-target" name="no-target" style="visibility:hidden"></iframe>
 			</div>
         </div>
       </div>
