--- a/Cooling.html
+++ b/Cooling.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>PARKES</title>
 
-      <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+      <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
@@ -100,8 +100,8 @@
         <h2>The Problem</h2>
          The big alkilees heal is the liners and the open decks. The V4 Honda is a great block to work with but the open deck have pressure limitations. I distorted 3 blocks each within 20 minutes of use due to the sheer thermal and compression expansion rates in the combustion chamber. Both of which I knew nothing about when I started tuning. Yes, yes I know; If I had studied and drawn it in CAD in the first place I would of known all this but then I wouldn’t be building the bike: I would be talking about it down the pub instead.
       </div>
-	  <div class="image-right-container" width="200px">
-          <img src="img/thermostat.jpg" class="image-right" width="180px">
+	  <div class="image-right-container2" width="200px">
+          <img src="img/thermostat.jpg" class="image-right2" width="180px">
           <div class="image-text">
             Intricate temperature sensor housing manually machined
           </div>
@@ -130,10 +130,12 @@ The additional water, rads, pipes and ducting is costing me performance in so ma
         <h2>Foundry needed</h2>
 	  The multiple last place finishes have been down to the steering and/or spikes in poor cooling. I have built in many safe guards to protect the engine from melting. Anything over 85 degrees and the acceleration injection correction starts to drop off, mixture richens and advance drops. The ECU then monitors conditions as the temp rises further which effectively drops performance to the point where it feels like you are towing a dead horse. It does just enough to let me coast for the remaining laps and try to maintain corner speed whilst cruising down the straights just to get lap experience. There is so much to evaluate as well as ‘race’ that the amount of laps needed is high. If my calculations are right; at 14K rpm it is flowing a massive 3.3 litres of water every second! The temperature rises 5 degrees by dropping to 10K rpm; I like (or perhaps in this case I don't like) to imagine the pockets of dancing steam around the jackets at those temperatures, surface temperature of the pistons must be pushing high 300’s. Not helped by the fact that modern pistons are so wasted there is less surface to conduct the heat to the thermally inferior liners. If only I had a foundry!
         </div>
-		<img src="img/001.jpg" class="image-centre" width="500px">
+		<div class="image-center-container2">
+		<img src="img/001.jpg" class="image-center2">
           <div class="image-text">
             Cut through of the air flow through the seat section passing through the curved radiator: 1 off 3
           </div>
+		  </div>
 		</div>
 		</div>
         <div id="footer-background">
