--- a/Engine.html
+++ b/Engine.html
@@ -6,7 +6,7 @@
         <title>PARKES</title>
 
       
-      <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+      <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
@@ -139,8 +139,6 @@
 		</div>
         <div id="footer-background">
           <p> <span style="font: 3.5em 'Oswald', sans-serif"> PARKES </span> <br> The Road Race Motorcycle </p>
-
         </div>
-
     </body>
 </html>
