--- a/exhausts.html
+++ b/exhausts.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <title>PARKES</title>
 
-      <link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
+      <link rel="shortcut icon" href="img/favicon.jpg" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="stylesheets/screenintro.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
