Text changes to intro

--- a/Aero.html
+++ b/Aero.html
@@ -130,7 +130,7 @@
 			</div>
 			</div>
 			<div class="category">
-			<img src="img/wetlay.jpg" height="200px" width="auto">
+			<img src="img/moulds.jpg" height="200px" width="auto">
 			<div class="image-text">
 					3.Remove cured mould from original part
 			</div>
